# veld

./: .gitignore  .gitmodules  BYTECODE_COMPILATION_GUIDE.md  CHANGELOG_FIXES.md  COMPLETE_SESSION_SUMMARY.md  CURRENT_STATUS.txt  Cargo.toml  DEBUG_IO_PRINTLN.txt  DEBUG_REGISTRATION.md  FUNCTION_TYPE_FIX.md  GENERIC_PARAMS_UPDATE.md  HASHSET_AND_FIXES_SUMMARY.md  HOVER_FIX_SUMMARY.md  INTERPOLATION_SUMMARY.md  INTERPRETER_BUG_REPORT.md  KNOWN_LIMITATIONS.md  LET_IN_FEATURE.md  LICENSE  LSP_TESTING_GUIDE.md  MODULE_REGISTRY_COMPLETE.md  PARSER_FIX_NEWLINE_AWARENESS.md  README.md  SESSION_SUMMARY_STDLIB_EXPANSION.md  STDLIB_ARRAY_METHODS.md  STDLIB_EXPANSION_ARRAY_METHODS.md  STDLIB_IMPORT_FIX.md  STDLIB_RESOLUTION_FIX.md  STDLIB_UPDATE.txt  TESTING_VSCODE_EXTENSION.md  TEST_MODULE_REGISTRY.txt  TEST_NOW.txt  TUPLE_DESTRUCTURING_DESIGN.md  TUPLE_DESTRUCTURING_FIX.md  TUPLE_DESTRUCTURING_STATUS.md  TUPLE_DESTRUCTURING_SUMMARY.md  VSCODE_EXTENSION_SUCCESS.md  WHERE_CLAUSE_TODO.md  cabal.project  debug_annotation_issue.veld  debug_ast.rs  (+103 more)
.zed/: settings.json  tasks.json
Writerside/: in.tree  v.tree  writerside.cfg
app/: Main.hs
core/: Cargo.toml
core/src/: ast.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  module.rs  native.rs  parser.rs  types.rs
core/src/common/: source.rs
core/src/interpreter/: scope.rs  value.rs
core/src/types/: base.rs  bits.rs  checker.rs  mod.rs  numeric.rs  numeric_ops.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/bytecode/: Cargo.toml  README.md
crates/bytecode/examples/: simple_arithmetic.rs
crates/bytecode/src/: bytecode_file.rs  chunk.rs  compiler.rs  compiler_v2.rs  instruction.rs  lib.rs  register_alloc.rs  value.rs  vm.rs  vm_v2.rs
crates/bytecode/tests/: closure_tests.rs  compiler_integration.rs  end_to_end.rs  exhaustiveness_checking.rs  for_loop_tests.rs  pattern_matching_comprehensive.rs  real_veld_files.rs  simple_function_call_test.rs  type_checker_integration.rs
crates/expander/: Cargo.toml  EVOLUTIONARY_SUMMARY.md  README.md
crates/expander/benches/: macro_expansion.rs
crates/expander/examples/: integration_example.rs  macro_usage.veld  migration_example.rs
crates/expander/src/: evolutionary_design.rs  integration.rs  lib.rs  parser.rs
crates/expander/tests/: integration_tests.rs
crates/interpreter/: Cargo.toml
crates/interpreter/examples/: gc_integration.rs  hybrid_memory_model.rs
crates/interpreter/src/: expand_macros.rs  hybrid_integration.rs  hybrid_value.rs  interpreter.rs  lib.rs  native.rs  scope.rs
crates/interpreter/src/gc/: README.md  allocator.rs  collector.rs  handle.rs  mark.rs  mod.rs  root_set.rs  statistics.rs  value_ref.rs
crates/interpreter/tests/: gc_interpreter_test.rs  test_gc_roots.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/lsp/: Cargo.toml  FEATURES.md  README.md  TESTING.md
crates/lsp/examples/: test.veld  with_errors.veld
crates/lsp/src/: analysis.rs  lib.rs  main.rs  rpc.rs
crates/repl/: Cargo.toml
crates/repl/src/: lib.rs  main.rs  repl.rs
crates/repl/veld/: Cargo.toml
crates/repl/veld/src/: main.rs
doc/: BUG_FIXES_SUMMARY.md  BYTECODE_FIXES_SUMMARY.md  BYTECODE_STATUS.md  BYTECODE_SUCCESS.md  COMPOUND_ASSIGNMENT_IMPLEMENTATION.md  CURRENT_STATUS.md  DO_BLOCK_FIX.md  FINAL_ACHIEVEMENTS_SUMMARY.md  FINAL_FIX.txt  FIX_SUMMARY.md  HOVER_FIX_SUMMARY.md  HOVER_FIX_TESTING.md  IMPLEMENTATION_STATUS.md  INTERPRETER_BUG_REPORT.md  KNOWN_LIMITATIONS.md  MULTI_VALUE_RETURNS_IMPLEMENTATION.md  NEXT_STEPS.md  NEXT_STEPS_TYPE_DISPLAY.md  PRINTLN_MACRO_SUCCESS.md  PROPER_SOLUTION.md  QUICK_TEST_CHECKLIST.md  README_BYTECODE.md  REMARKS.md  REMY_SAYS.md  SESSION_SUMMARY.md  SESSION_SUMMARY_STDLIB_EXPANSION.md  START_HERE.md  Structs.md  TESTING_SUMMARY.md  TUPLE_DESTRUCTURING_QUICK_REF.md  TYPE_DISPLAY_UPDATE.txt  USAGE.md  USAGE_02.md  USAGE_03.md  USAGE_04.md  hybrid_memory_implementation_summary.md  memory_model.md  plex_types.md  std-io.md  stdlib-index.md
docs/: BUG_FIXES_SUMMARY.md  BYTECODE_ARCHITECTURE_ANALYSIS.md  BYTECODE_FILES.md  BYTECODE_QUICK_COMPARISON.md  BYTECODE_SUMMARY.md  FIXES_QUICK_REF.md  FIXES_SUMMARY.md  INTEGRATION_ISSUES.md  INTEGRATION_TESTING_SUCCESS.md  PATTERN_MATCHING_TEST_SUMMARY.md  PHASE6_COMPLETE_SUMMARY.md  PHASE6_FINAL_SUMMARY.md  PHASE6_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_CLOSURES_SUMMARY.md  PHASE_4_VISUAL_SUMMARY.txt  PHASE_5_ITERATORS_SUMMARY.md  PHASE_5_VISUAL_SUMMARY.txt  PRINTLN_MACRO_GUIDE.md  REAL_VELD_FILES_TESTING.md  REGISTER_VM_MIGRATION_PLAN.md  REGISTER_VM_PROGRESS.md  SESSION_SUMMARY_PATTERN_TESTING.md  SESSION_SUMMARY_TYPE_CHECKER.md  TOSTR_RENAME_SUMMARY.md  TYPE_CHECKER_INTEGRATION_SUMMARY.md  TYPE_CHECKER_QUICK_REF.md
examples/: README.md  macro_usage.veld  println_demo.veld
extensions/: BUILD_SUCCESS.md  CRITICAL_FIX_SUMMARY.md  FIXED_LSP_INTEGRATION.md  QUICKSTART.md  README.md  READY_TO_TEST.md  SETUP_COMPLETE.md  install-extension.sh  install-zed.sh
ref/: complex.veld  example.veld  example02.veld  example03.veld  example04.veld
repl/: Cargo.toml
repl/src/: interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs  types.rs
src/: ast.rs  error.rs  interpreter.rs  lexer.rs  main.rs  (+4 more)
(+313 files in other folders)
