[package]
name = "veld-core"
version = "0.1.3"
edition = "2024"

[dependencies]
logos = { version = "0.15.1", features = ["export_derive"] }          # For lexing
thiserror = "1.0"          # For error handling
tracing = "0.1"            # For tracing support
tracing-subscriber = "0.3" # For tracing subscriber
