[package]
name = "veld-bytecode"
version = "0.1.0"
edition = "2024"
description = "Bytecode compiler and virtual machine for the Veld programming language"
license = "Apache-2.0"

[dependencies]
veld-common = { path = "../common" }
veld-error = { path = "../error" }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3"
