[package]
name = "veld-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.2"

veld-common = { path = "../common" }
veld-error = { path = "../error" }
veld-interpreter = { path = "../interpreter" }
