[package]
name = "veld-repl"
version = "0.1.4"
edition = "2021"
# default-run = "veld-repl"

[dependencies]
logos = "0.13"             # For lexing
chumsky = "0.9"            # For parsing (optional, you can use other parsing libraries)
thiserror = "1.0"          # For error handling
tracing = "0.1"            # For tracing support
tracing-subscriber = "0.3" # For tracing subscriber
reedline = "0.27"          # For REPL functionality
anyhow = "1.0"             # For error handling
colored = "3"
tracing-indicatif = "0.3.13"
crossterm = "0.28.1"
ratatui = "0.29.0"

"veld-interpreter" = { path = "../interpreter" } # Path to your core library
"veld-common" = { path = "../common" } # Path to your common library
"veld-error" = { path = "../error" }   # Path to your AST library
